# Code2

./: package-lock.json  package.json
cargo-deny-main/: .gitlab-ci.yml  .gitmodules
cargo-deny-main/ci/: Dockerfile
docs-main/: .dockerignore  .gitignore  .gitlab-ci.yml  .markdown_style.rb  .yamllint.yaml  .yarnrc.yml  Dockerfile  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-main/.reuse/: dep5
docs-main/admin-docs/: index.mdx
docs-main/ci/: clone-repo-all  clone-repo-controller  clone-repo-controller-enterprise  clone-repo-obelisk  clone-repo-recorder  clone-repo-smtp-mailer  clone-repo-support
docs-main/ci/include/: clone.sh
docs-main/developer-docs/: index.mdx
docs-main/developer-docs/controller/: index.mdx
docs-main/src/pages/: index.module.css  index.tsx
etherpad-main/: .gitlab-ci.yml  .gitmodules  0001-fix-undefined-session.patch  Dockerfile  README.md  entrypoint.sh  example.docker-conpose.yaml
etherpad-main/.reuse/: dep5
etherpad-main/ep_read_session/: README.md  ep.json  index.js  package-lock.json  package.json
index.js/: package-lock.json  package.json
janus-gateway-main/: .gitlab-ci.yml  .yamllint.yaml  Dockerfile  README.md  docker-compose.example.yaml  entrypoint.sh  healthcheck.sh  make_janus_jcfg.sh  make_pfunix_jcfg.sh  make_rabbitmq_jcfg.sh
janus-gateway-main/.reuse/: dep5
obelisk-main/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
obelisk-main/.reuse/: dep5
obelisk-main/ci/: Dockerfile
obelisk-main/docs/admin/: README.md  auth.md  configuration.md  controller.md  sip.md
obelisk-main/extra/: example.toml
obelisk-main/src/: http.rs  main.rs  settings.rs  signaling.rs  sip.rs  websocket.rs
obelisk-main/src/media/: mod.rs  port_pool.rs  track.rs  webrtc_subscribe.rs
obelisk-main/src/media/sip_bin/: codec.rs  custom_rtpdtmfdepay.rs  mod.rs  sdp.rs
recorder-main/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
recorder-main/.reuse/: dep5
recorder-main/ci/: Dockerfile
recorder-main/compositor/: .gitignore  Cargo.toml  README.md  deny.toml
recorder-main/compositor/images/: add_source.graphml  insert_element.graphml  link_unlink_source.graphml  participant_FHD.xcf  remove_source.graphml
recorder-main/compositor/src/: lib.rs
recorder-main/compositor/src/layout/: grid.rs  mod.rs  speaker.rs
recorder-main/compositor/src/mixer/: audio_mixer.rs  debug.rs  mod.rs  overlay.rs  sink.rs  source.rs  stream.rs  talk.rs  text_style.rs  video_mixer.rs
recorder-main/compositor/src/overlays/: clock_overlay.rs  mod.rs  padding_overlay.rs  talk_overlay.rs  text_overlay.rs
recorder-main/compositor/src/sinks/: blinder.rs  dash.rs  fake.rs  matroska.rs  mod.rs  mp4.rs  rtmp.rs  system.rs  test.rs
recorder-main/compositor/src/sources/: mod.rs  test_source.rs  webrtc_source.rs
recorder-main/compositor/src/tests/: README.md  blinder.rs  dash.rs  generate_example_pipeline_picture.rs  matroska.rs  mixer.rs  mod.rs  mp4.rs  multi.rs  overlays.rs  speaker_mode.rs  stream_status.rs  webrtc.rs
recorder-main/compositor/src/tests/doc/: blinder.md  dash.md  layout.md  matroska.md  mp4.md  multi.md  overlays.md  remove.md  speaker_mode.md  stream_status.md
recorder-main/docs/admin/: README.md
recorder-main/docs/admin/configuration/: README.md  auth.md  controller.md  rabbitmq.md  recorder.md
recorder-main/extra/: example.toml
recorder-main/src/: http.rs  lib.rs  main.rs  recorder.rs  rmq.rs  settings.rs  signaling.rs  tests.rs
recorder-main/tests/: empty.rs  join_left.rs  many_participants.rs  multiple_user.rs  presentation.rs  single_user.rs  speaker_focus.rs  start_server.rs  very_long_recording.rs
recorder-main/tests/common/: controller.rs  logger.rs  mod.rs  prelude.rs  recorder.rs  webrtc.rs  websocket_server.rs
rust-main/: .gitlab-ci.yml  config.toml
rust-main/images/alpine3.15/: .gitlab-ci.yml  Dockerfile
rust-main/images/alpine3.16/: .gitlab-ci.yml  Dockerfile
rust-main/images/alpine3.17/: .gitlab-ci.yml  Dockerfile
rust-main/images/alpine3.18/: .gitlab-ci.yml  Dockerfile
rust-main/images/bookworm/: .gitlab-ci.yml  Dockerfile
simple-stream-view-main/: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  nginx.conf
simple-stream-view-main/webroot/: index.html
spacedeck-main/: .gitlab-ci.yml  0001-create-admin.patch  0002-delete-pdf.patch  CHANGELOG.md  Dockerfile  README.md  custom-environment-variables.json  example-compose.spacedeck.yaml
spacedeck-main/.reuse/: dep5
(+16 files in other folders)
