# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-obelisk"
version = "0.0.0-dev"
edition = "2021"
authors = ["OpenTalk Team <mail@opentalk.eu>"]
publish = false
license = "EUPL-1.2"

[dependencies]
config = { version = "0.13", default-features = false, features = ["toml"] }

gst = { package = "gstreamer", version = "0.20" }
gst-app = { package = "gstreamer-app", version = "0.20" }
gst-sdp = { package = "gstreamer-sdp", version = "0.20" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.20", features = [
    "v1_22",
] }
gst-rtp = { package = "gstreamer-rtp", version = "0.20", features = [
    "v1_22",
] }
gio = "0.17"

rand = "0.8"

parking_lot = "0.12"

tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
async-trait = "0.1"
futures = "0.3"

bytes = "1"
bitstream-io = "1.8"

log = "0.4"
env_logger = "0.10"

anyhow = "1"
thiserror = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["serde"] }

reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",
] }

tt = { package = "tokio-tungstenite", version = "0.20", features = [
    "rustls-tls-native-roots",
] }

chrono = { version = "0.4", features = ["serde"] }

sdp-types = { version = "0.1", package = "ezk-sdp-types" }
sip-types = { version = "0.1", package = "ezk-sip-types" }
sip-core = { version = "0.2", package = "ezk-sip-core", features = [
    "tls-native-tls",
] }
sip-ua = { version = "0.2", package = "ezk-sip-ua" }
sip-auth = { version = "0.1", package = "ezk-sip-auth" }

native-tls = "0.2.11"
tokio-native-tls = "0.3.1"

bytesstr = "1"

once_cell = "1.18"
hound = "3.5"

byte-slice-cast = "1.2"

openidconnect = "3"

anstream = "0.3"
owo-colors = "3"
