# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-recorder"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compositor = { path = "compositor" }

gst = { package = "gstreamer", version = "0.20" }
gst-sdp = { package = "gstreamer-sdp", version = "0.20" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.20", features = [
    "v1_22",
] }
tt = { package = "tokio-tungstenite", version = "0.20", features = [
    "rustls-tls-webpki-roots",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
config = { version = "0.13", default-features = false, features = ["toml"] }
env_logger = "0.10"
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "fs",
    "signal",
] }
#lapin = "2.1"
lapin = { version = "2.3", default-features = false, features = [
    "rustls-webpki-roots-certs",
] }
tokio-reactor-trait = "1"
tokio-executor-trait = "2"
futures = "0.3"
log = "0.4"
serde_json = "1"
rand = "0.8"
uuid = { features = ["serde", "v4"], version = "1" }
bytes = "1"
thiserror = "1"
openidconnect = "3"
tempfile = "3"
pin-project-lite = "0.2"

[workspace]
members = ["compositor"]

[workspace.package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
