# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "compositor"
version = "0.1.1"
edition = "2021"
authors.workspace = true
license = "EUPL-1.2"
publish = false

[dependencies]
gst = { package = "gstreamer", version = "0.20", features = ["v1_22"] }
gst-app = { package = "gstreamer-app", version = "0.20" }
gst-sdp = { package = "gstreamer-sdp", version = "0.20" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.20", features = [
    "v1_22",
] }
log = "0.4"
glib = "0.17"
tokio = { version = "1", features = [
    "sync",
    "net",
    "macros",
    "rt-multi-thread",
    "time",
] }
inotify = "0.10"
tempfile = "3"
thiserror = "1"
derivative = "2.2"
gst-base = { package = "gstreamer-base", version = "0.20" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
env_logger = "0.10"
glob = "0.3"
lazy_static = "1.4"
